<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".FourthActivity">


    <ImageButton
        android:id="@+id/buttonBird"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="432dp"
        android:background="@drawable/bird"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="selectType">

    </ImageButton>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="408dp"
        android:fontFamily="sans-serif"
        android:text="@string/hamster"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="268dp"
        android:fontFamily="sans-serif"
        android:text="@string/snake"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonBunny"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="432dp"
        android:background="@drawable/rabbit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="selectType">

    </ImageButton>

    <ImageButton
        android:id="@+id/buttonSnake"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="292dp"
        android:background="@drawable/snake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="selectType">

    </ImageButton>

    <TextView
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="544dp"
        android:fontFamily="sans-serif"
        android:text="@string/cat"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="284dp"
        android:layout_marginBottom="544dp"
        android:fontFamily="sans-serif"
        android:text="@string/horse"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageButton
        android:id="@+id/buttonOther"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/another"
        android:onClick="selectType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

    </ImageButton>

    <ImageButton
        android:id="@+id/buttonDog"
        android:layout_width="103dp"
        android:layout_height="105dp"
        android:layout_marginBottom="568dp"
        android:background="@drawable/dogicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="selectType">

    </ImageButton>

    <ImageButton
        android:id="@+id/buttonHamster"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="432dp"
        android:background="@drawable/hamster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="selectType">

    </ImageButton>

    <TextView
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="244dp"
        android:layout_marginBottom="268dp"
        android:fontFamily="sans-serif"
        android:text="@string/another"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonHorse"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="568dp"
        android:background="@drawable/horseicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="selectType">

    </ImageButton>

    <TextView
        android:layout_width="339dp"
        android:layout_height="129dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/who"
        android:textColor="#2f2f2f"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="284dp"
        android:layout_marginBottom="408dp"
        android:fontFamily="sans-serif"
        android:text="@string/bird"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="408dp"
        android:fontFamily="sans-serif"
        android:text="@string/rabbit"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginBottom="544dp"
        android:fontFamily="sans-serif"
        android:text="@string/doggy"
        android:textColor="#2f2f2f"
        android:textSize="19sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/buttonCat"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="568dp"
        android:background="@drawable/caticon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="selectType">

    </ImageButton>


    <ImageButton
        android:id="@+id/selectPet"
        android:layout_width="70dp"
        android:layout_height="69dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="startNewActivity">

    </ImageButton>

    <ImageView
        android:layout_width="168dp"
        android:layout_height="18dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/points3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>
