<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FF9800"
    tools:context=".MainActivity">

 <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteX="206dp"
     tools:layout_editor_absoluteY="411dp" />

 <ImageView
     android:id="@+id/imageView"
     android:layout_width="450dp"
     android:layout_height="687dp"
     android:src="@drawable/yellow"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.743"
     app:layout_constraintStart_toStartOf="parent"
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteY="-9dp" />

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideline"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_constraintGuide_begin="20dp" />

 <androidx.constraintlayout.widget.Barrier
     android:id="@+id/barrier2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:barrierDirection="left"
     app:constraint_referenced_ids="imageView" />


 <ImageView
     android:id="@+id/imageView9"
     android:layout_width="83dp"
     android:layout_height="356dp"
     android:layout_marginStart="16dp"
     android:layout_marginTop="12dp"
     android:layout_marginEnd="310dp"
     android:src="@drawable/logo"
     app:layout_constraintBottom_toBottomOf="@+id/view3"
     app:layout_constraintEnd_toEndOf="@+id/imageView"
     app:layout_constraintHorizontal_bias="0.943"
     app:layout_constraintStart_toEndOf="@+id/imageView"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.259" />

 <View
     android:id="@+id/view3"
     android:layout_width="57dp"
     android:layout_height="68dp"
     android:layout_marginBottom="578dp"

     android:background="@drawable/lapa"
     app:layout_constraintBottom_toBottomOf="@+id/imageView"
     app:layout_constraintEnd_toEndOf="@+id/imageView9" />

 <TextView
     android:id="@+id/textView6"
     android:layout_width="277dp"
     android:layout_height="85dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="276dp"
     android:contentDescription="@string/care"
     android:fontFamily="sans-serif-medium"
     android:gravity="center_horizontal"
     android:text="@string/name2"
     android:textColor="#565656"
     android:textSize="36sp"
     android:textStyle="normal"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.378"
     app:layout_constraintStart_toStartOf="@+id/guideline" />

 <ImageView
     android:id="@+id/imageView10"
     android:layout_width="208dp"
     android:layout_height="486dp"
     android:layout_marginBottom="4dp"
     android:src="@drawable/heart"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.453"
     app:layout_constraintStart_toStartOf="parent" />

 <TextView
     android:layout_width="339dp"
     android:layout_height="126dp"
     android:layout_marginBottom="96dp"
     android:fontFamily="sans-serif"
     android:gravity="center_horizontal"
     android:text="@string/name"
     android:textColor="#929292"
     android:textSize="27sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />

 <ImageButton
     android:layout_width="300dp"
     android:layout_height="120dp"
     android:layout_marginBottom="16dp"
     android:background="@drawable/button"
     android:contentDescription="@string/start"
     android:contextClickable="true"
     android:onClick="startNewActivity"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.495"
     app:layout_constraintStart_toStartOf="parent" />

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideline2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_constraintGuide_begin="20dp" />


 <Button
     android:id="@+id/changeLanguageButton"
     android:layout_width="128dp"
     android:layout_height="42dp"
     android:layout_centerInParent="true"
     android:layout_marginBottom="4dp"
     android:backgroundTint="#FFFFFF"
     android:text="@string/change_language"
     android:textColor="#929292"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>